More refactoring for computeGradientsAndScore